--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.11.0
 Django==6.0.1
+django-debug-toolbar==6.2.0
+djangorestframework==3.16.1
+drf-nested-routers==0.95.0
+python-decouple==3.8
 sqlparse==0.5.5
 tzdata==2025.3
